--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "ownerNumber": ["6282193115723@s.whatsapp.net","62887435047326@s.whatsapp.net"],
+    "ownerNumber": ["03479759099","03479759099"],
     "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
     "instagram" : "https://instagram.com/zeeoneofc",
     "gcwa" : "https://instabio.cc/Alphabot",
